--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Por favor, sinta-se à vontade para entrar em contato através dos meios descrit
 
 									</div>
 									<span class="image object">
-										<img src="images/perfil2.jpg" alt="" />
+										<img src="images/perfil2.JPG" alt="" />
 									</span>
 								</section>
 
